# RayTracingGPU

./: .gitignore  .gitmodules  BVH.cu  CMakeLists.txt  Importer.cu  InputHandler.cu  Light.cu  Matrix.cu  Object.cu  README.md  Rendering.cu  Scene.cpp  Scene.cu  Vec3.cu  Vec4.cu  main.cpp  main.cu
include/: BVH.cuh  Camera.h  CudaHelpers.h  Importer.cuh  InputHandler.cuh  Light.cuh  Material.cuh  Matrix.cuh  Matrix.h  Memory.cuh  Object.cuh  Object.h  Radians.h  Ray.cuh  Ray.h  Rendering.cuh  Scene.cuh  Scene.h  Vec3.cuh  Vec3.h  Vec4.cuh
scenes/: test2.glb
